好きなところにbundle.jsを出力する

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
 <head>
-	<link rel="stylesheet" href="test.css">
+<link rel="stylesheet" href="./assets/css/test.css">
 </head>
 <body>
 <div id="root"></div>
-<script src="./dist/bundle.js"></script>
+<script src="bundle.js"></script>
 </body>
