--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,7 +1,8 @@
 <html>
 <head>
+	<meta charset="UTF-8">
 </head>
 <body>
 <div id="root"></div>
-<script src="bundle.js"></script>
+<script src="bundle.js" charset="UTF-8"></script>
 </body>
